--- a/src/components/code/code-js/js-bom/pages/elem-console.html
+++ b/src/components/code/code-js/js-bom/pages/elem-console.html
@@ -1,7 +1,19 @@
 <h1>console (window.console)</h1>
 
 
+<!-- Свойства console -->
 <article class="article">
+  <div class="anchor" id="props"></div>
+  <h2>Свойства console</h2>
+  <ol>
+    <li><a href="#memory">memory</a></li>
+  </ol>
+</article>
+
+
+<!-- Методы console -->
+<article class="article">
+  <div class="anchor" id="methods"></div>
   <h2>Методы console</h2>
   <ol>
     <li><a href="#assert">assert</a></li>
