--- a/src/components/code/code-js/js-bom/pages/elem-xhr.html
+++ b/src/components/code/code-js/js-bom/pages/elem-xhr.html
@@ -37,16 +37,18 @@
   <h2>XMLHttpRequest запрос</h2>
   <p>Чтобы сделать запрос, нам нужно выполнить четыре шага:</p>
 
-  <h4>1. Создать новый объект XMLHttpRequest.</h4>
+  <h4>1. Создать новый объект XMLHttpRequest</h4>
   <code>const xhr = new XMLHttpRequest(); // у конструктора нет аргументов</code>
   
-  <h4>2. Инициализировать его.</h4>
-  
+  <h4>2. Сконфигурировать его. Например GET запрос на index.html</h4>
+  <code>xhr.open('GET', 'index.html')</code>
+
+  <p>Синтаксис метода open</p>
   <code>xhr.open(method, URL, [async, user, password])</code>
   <p>Этот метод обычно вызывается сразу после new XMLHttpRequest. В него передаются основные параметры запроса:</p>
   <ol>
-    <li>method – HTTP-метод. Обычно это "GET" или "POST".</li>
-    <li>URL – URL, куда отправляется запрос: строка, может быть и объект URL.</li>
+    <li>method – HTTP-метод. Обычно это "GET" или "POST", но могут быть и другие которые поддерживает сервер</li>
+    <li>URL – адрес запроса в виде строки. Можно использовать http://, ftp://, file://</li>
     <li>async – если true, то будет выполнен асинхронный запрос. Если false, то будет выполнен синхронный запрос.</li>
     <li>user, password – логин и пароль для базовой HTTP-авторизации (если требуется).</li>
   </ol>  
@@ -55,14 +57,21 @@
   <p>Например, конфигурируем GET запрос на URL 'some_data.txt'</p>
   <code>xhr.open('GET', 'some_data.txt', false);</code>
   
-  <h4>3. Послать запрос.</h4>
+  <h4>3. Можно указать заголовки в запросе.</h4>  
+  <code>xhr.setRequestHeader('Content-type', 'application/json')</code>
+
+  <p>Синтаксис метода setRequestHeader. Устанавливает заголовок name запроса со значением value</p>
+  <code>xhr.setRequestHeader(name, value)</code>
   
-  <code>xhr.send([body])</code>
+  <h4>4. Послать запрос.</h4>  
+  <code>xhr.send()</code>
+
   <p>Этот метод устанавливает соединение и отсылает запрос к серверу. Необязательный параметр body содержит тело запроса.</p>
+  <code>xhr.send([body])</code>
   
   <p>Некоторые типы запросов, такие как GET, не имеют тела. А некоторые, как, например, POST, используют body, чтобы отправлять данные на сервер. Мы позже увидим примеры.</p>
 
-  <h4>4. Обработать результат.</h4>
+  <h4>5. Обработать результат.</h4>
   <p>Если получен статус ответа 200, то вывести результат, где responseText - текст ответа. Иначе обработать ошибку.</p>
 <pre>if (xhr.status === 200) {
   alert(xhr.responseText);
