--- a/src/components/code/code-js/js-theory/pages/elem-eventloop.html
+++ b/src/components/code/code-js/js-theory/pages/elem-eventloop.html
@@ -19,6 +19,7 @@
   <p><a href="https://coderoad.ru/25915634/%D0%A0%D0%B0%D0%B7%D0%BD%D0%B8%D1%86%D0%B0-%D0%BC%D0%B5%D0%B6%D0%B4%D1%83-%D0%BC%D0%B8%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B8-%D0%BC%D0%B0%D0%BA%D1%80%D0%BE%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B5%D0%B9-%D0%B2-%D0%BA%D0%BE%D0%BD%D1%82%D0%B5%D0%BA%D1%81%D1%82%D0%B5-%D1%86%D0%B8%D0%BA%D0%BB%D0%B0-%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D0%B9">coderoad.ru</a> Разница между микрозадачей и макрозадачей в контексте цикла событий</p>
 
   <h3>Ссылки на habr</h3>
+  <p><a href="https://habr.com/ru/companies/articles/340508/">Как работает JS: цикл событий, асинхронность и пять способов улучшения кода с помощью async / await</a> (2017.10.19)</p>
   <p><a href="https://habr.com/ru/articles/680846/">Базовое понимание принципа Eventloop</a> (2022.08.02)</p>
 </article>
 
@@ -75,7 +76,7 @@
     <li><code>setImmediate()</code></li>
     <li><code>addEventListener()</code></li>
     <li><code>requestAnimationFrame()</code></li>
-    <li><code>XmlHTTPRequest</code></li>
+    <li><code>XMLHttpRequest</code></li>
   </ol>
 
   <p>Отрисовка страницы (Стадии рендера). Как только мы получили (изменили) html и css</p>
