--- a/src/components/code/code-js/scss/code-js.scss
+++ b/src/components/code/code-js/scss/code-js.scss
@@ -5,4 +5,13 @@
   flex-wrap: wrap;
   gap: 10px;
 }
+
+.tr-space {
+  height: 5px;
+  background-color: #84ed84;
+}
+
+td {
+  align-items: start;
+}
 /* code-js */
