--- a/src/components/code/code-js/js-practice/pages/elem-array.html
+++ b/src/components/code/code-js/js-practice/pages/elem-array.html
@@ -7,6 +7,8 @@
 
   <p><a href="#t1">1. Копирование массива</a></p>
   <p><a href="#t2">2. Создание массива из строки</a></p>
+  <p><a href="#t3">3. Полифил для flat()</a></p>
+  <p><a href="#t4">4. Полифил для reduce()</a></p>
 </article>
 
 
@@ -14,7 +16,7 @@
 <article class="article">
   <div class="anchor" id="t1"></div>
   <h3>1. Копирование массива</h3>
-  
+
   <hr>
 
   <h3>Поверхностное копирование</h3>
@@ -59,7 +61,7 @@
 <article class="article">
   <div class="anchor" id="t2"></div>
   <h3>2. Создание массива из строки</h3>
-  
+
   <p>По строке можно итерироваться. На каждой итерации будет следующий символ строки</p>
   <ol>
     <li>
@@ -81,5 +83,94 @@
 </article>
 
 
+<!-- 3. Полифил для flat() -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>3. Полифил для flat()</h3>
+
+  <p>Написать полифил myFlat() для метода массивов flat(). Свой полифил добавить к методам для всех массивов. flat() возвращает новый массив и принимает один параметр - уровень вложенности на который раскроется возвращаемый массив. Без параметров раскрывается на один уровень.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>function myFlat(arg = 1) {
+  const newArr = [];
+
+  function t1(arr, arg2) {
+    for (let i = 0; i &lt; arr.length; i++) {
+      if (Array.isArray(arr[i]) && arg2 &lt; arg) {
+        // console.log('if', arr[i], arg2, i)
+        t1(arr[i], arg2+1);
+      } else {
+        // console.log('else', arr[i], arg2, i)
+        newArr.push(arr[i])
+      }
+    }
+  }
+
+  t1(this, 0);
+
+  return newArr;
+}
+
+Array.prototype.myFlat = myFlat;
+
+let arr1 = [[1], [2,[3]], 4, 5]
+const arr = [0, 0, [1], [[2, 2]], [1], [[[3, 3, 3]]], [[[[[['шесть']]]]]]]
+
+console.log(arr1.myFlat(Infinity));
+console.log(arr.myFlat(Infinity));</pre>
+  </details>
+</article>
+
+
+<!-- 4. Полифил для reduce() -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>4. Полифил для reduce()</h3>
+
+  <p>Написать полифил myReduce() для метода массива reduce(). Метод должен принимать callback-функцию и начальное значение и возвращать одно значение как результат последовательного выполнения callback-функции ко всем элементам массива.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>function myReduce(fn, start) {
+  let result;
+  let j;
+  if (start !== undefined) {
+    result = start;
+    j = 0;
+  } else {
+    result = this[0];
+    j = 1;
+  }
+
+  for (let i = j; i &lt; this.length; i++) {
+      result = fn(result, this[i])
+  }
+
+  return result;
+}
+
+Array.prototype.myReduce = myReduce;
+
+
+
+[].reduce((acc,next) => {
+  return acc+next;
+}, 0)
+
+let arr1 = [1,2,3,4,5,6]
+
+function fn1(acc1, next1){
+  acc1.push(next1**2);
+  return acc1;
+};
+
+function fn2(acc1, next1){
+  return acc1+next1;
+};
+
+console.log(arr1.myReduce(fn2));</pre>
+  </details>
+</article>
 
 
